<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_300">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/top_up_value_desc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="0dp">
                <Button
                    android:id="@+id/first_top_up_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:text="@string/first_top_up_value"
                    android:foreground="?android:attr/selectableItemBackground"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="0dp">
                <Button
                    android:id="@+id/second_top_up_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:text="@string/second_top_up_value"
                    android:foreground="?android:attr/selectableItemBackground"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="0dp">
                <Button
                    android:id="@+id/third_top_up_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:text="@string/third_top_up_value"
                    android:foreground="?android:attr/selectableItemBackground"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/top_up_value_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/top_up_value"
                android:inputType="number"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/top_up_value_hint" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/top_up_payment_method_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/white"
        android:padding="20dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/top_up_payment_method"/>
        <FrameLayout
            android:id="@+id/top_up_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/summary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <LinearLayout
        android:id="@+id/summary_container"
        android:background="@drawable/line_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/summary_pay_label"/>
            <TextView
                android:id="@+id/summary_pay_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/summary_bonus_label"/>
            <TextView
                android:id="@+id/summary_bonus_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/summary_fee_label"/>
            <TextView
                android:id="@+id/summary_fee_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="0"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/summary_total_label"/>
            <TextView
                android:id="@+id/summary_total_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="right"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_alignParentBottom="true"
            card_view:cardCornerRadius="0dp">
            <Button
                android:id="@+id/top_up_submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/submit"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</LinearLayout>